# Playground_cocotb

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
Scripts/: Makefile  create_wrapper.py  module.json  test_adder.py  test_adder_cpp.py  test_adder_vhd.py  verif_result.py
Scripts/quick_start_guide/: Makefile  counter.vhd  test_my_design.py
Scripts/test_create_wrapper/: config.json  main.cpp  main.py
Scripts/test_create_wrapper/includes/: type.hpp
Srcs/cpp_model/: main.cpp
Srcs/cpp_model/includes/: adder.hpp  type.hpp
Srcs/rtl_model/: adder.vhd
